# mcp-server-webdriver

./: .gitignore  AGENTS.md  README.md  pyproject.toml  server.py
debian/: Jenkinsfile  changelog  control  mcp-server-webdriver.1  py3dist-overrides  python3-mcp-server-webdriver.install  rules  watch
tests/: conftest.py  test_server.py
