[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-webdriver"
version = "0.6.0"
description = "MCP Server for browser automation via Selenium WebDriver + geckodriver (Firefox)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "selenium", "webdriver", "geckodriver", "firefox", "browser-automation"]
dependencies = [
    "fastmcp>=2.10.0",
    "selenium>=4.0.0",
]

[project.optional-dependencies]
# Fallback geckodriver auto-download (when gecko-driver .deb is unavailable)
auto-driver = [
    "webdriver-manager>=4.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "webdriver-manager>=4.0.0",
]

[project.scripts]
mcp-server-webdriver = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that open a real headless Firefox (require geckodriver on PATH)",
]
